# tic-tac-toe

./: README.md  pyproject.toml
tic_tac_toe/: tic-tac-toe.py
