[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Oleg Skakunov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
terminaltables = "^3.1.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"